# genesis-core

./: .gitignore  ECOSYSTEM_DOCTRINE.md  README.md  pyproject.toml
genesis-engine/: ROADMAP.md
genesis-engine/docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  TROUBLESHOOTING.md
genesis-engine/genesis-engine-agents/: package.json
genesis-engine/genesis-engine-cli/: package.json
genesis-engine/genesis-engine-core/: package.json
genesis-engine/genesis-engine-templates/: package.json
genesis-engine/genesis-engine-web/: package.json
src/genesis_core/config/: project_config.py
src/genesis_core/orchestrator/: core_orchestrator.py
tests/: conftest.py
tests/integration/: test_orchestrator_integration.py
tests/unit/: test_project_config.py
